<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presenter.converter.ConverterFragment"
    android:layout_gravity="center_vertical"
    android:background="#292929">

    <LinearLayout
        android:id="@+id/values"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@id/keyboard"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/base_currency_text_view"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:textSize="24sp"
                android:textColor="@color/white" />

            <com.google.android.material.textfield.TextInputLayout

                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                >

                <AutoCompleteTextView
                    android:id="@+id/base_currency_dropdown"
                    android:gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:textColor="@color/white"
                    android:inputType="none"
                    tools:text="USD" />

            </com.google.android.material.textfield.TextInputLayout>

            <!--<com.google.android.material.textfield.TextInputLayout
                android:id="@+id/base_currency_spinner"
                android:layout_width="wrap_content"
                android:layout_height="match_parent" />-->

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#353535"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="70dp"

            android:gravity="center"
            android:orientation="horizontal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/target_currency_text_view"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:textSize="24sp"
                android:textColor="@color/white" />

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                >
                <AutoCompleteTextView
                    android:id="@+id/target_currency_dropdown"
                    android:gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:textColor="@color/white"
                    android:inputType="none"
                    tools:text="EUR" />

            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>
    </LinearLayout>

    <GridLayout
        android:id="@+id/keyboard"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="50dp"
        android:layout_marginTop="148dp"
        android:columnCount="3"
        android:rowCount="5"
        android:useDefaultMargins="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/values">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_1"
            style="@style/KeyboardButtonStyle"
            android:layout_row="3"
            android:layout_column="0"
            android:background="@drawable/digit_button_bg"
            android:text="@string/_1" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_2"
            style="@style/KeyboardButtonStyle"
            android:layout_row="3"
            android:layout_column="1"
            android:background="@drawable/digit_button_bg"
            android:text="@string/_2"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_3"
            style="@style/KeyboardButtonStyle"
            android:layout_row="3"
            android:layout_column="2"
            android:background="@drawable/digit_button_bg"
            android:text="@string/_3"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_4"
            style="@style/KeyboardButtonStyle"
            android:layout_row="2"
            android:layout_column="0"
            android:background="@drawable/digit_button_bg"
            android:text="@string/_4" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_5"
            style="@style/KeyboardButtonStyle"
            android:layout_row="2"
            android:layout_column="1"
            android:background="@drawable/digit_button_bg"
            android:text="@string/_5"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_6"
            style="@style/KeyboardButtonStyle"
            android:layout_row="2"
            android:layout_column="2"
            android:background="@drawable/digit_button_bg"
            android:text="@string/_6" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_7"
            style="@style/KeyboardButtonStyle"
            android:layout_row="1"
            android:layout_column="0"
            android:background="@drawable/digit_button_bg"
            android:text="@string/_7"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_8"
            style="@style/KeyboardButtonStyle"
            android:layout_row="1"
            android:layout_column="1"
            android:background="@drawable/digit_button_bg"
            android:text="@string/_8" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_9"
            style="@style/KeyboardButtonStyle"
            android:layout_row="1"
            android:layout_column="2"
            android:background="@drawable/digit_button_bg"
            android:text="@string/_9"/>

        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/btn_history"
            style="@style/KeyboardButtonStyle"
            android:layout_row="4"
            android:layout_column="0"
            android:background="@drawable/action_button_bg"
            android:src="@mipmap/history_icon"
            />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_0"
            style="@style/KeyboardButtonStyle"
            android:layout_row="4"
            android:layout_column="1"
            android:background="@drawable/digit_button_bg"
            android:text="@string/_0"
            />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_equal"
            style="@style/KeyboardButtonStyle"
            android:layout_row="4"
            android:layout_column="2"
            android:background="@drawable/action_button_bg"
            android:text="@string/equal"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_clear"
            style="@style/KeyboardButtonStyle"
            android:layout_row="0"
            android:layout_column="0"
            android:background="@drawable/action_button_bg"
            android:text="@string/clear" />

        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/btn_switch"
            style="@style/KeyboardButtonStyle"
            android:layout_row="0"
            android:layout_column="1"
            android:background="@drawable/action_button_bg"
            android:src="@mipmap/swap_icon" />

        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/btn_graph"
            style="@style/KeyboardButtonStyle"
            android:layout_row="0"
            android:layout_column="2"
            android:background="@drawable/action_button_bg"
            android:src="@mipmap/geaph_icon" />

    </GridLayout>

</androidx.constraintlayout.widget.ConstraintLayout>